<resources>
    <string name="app_name">Sayfe</string>

    <!-- Main Activity -->
    <string name="aboutMainActivity">
        At Sayfe, we aspire to educate, support and empower students to combat issues surrounding sexual assault. We educate students on the importance of consent, the availability of resources and on the seriousness of sexual assault and harassment. We support survivors of sexual assault by providing support forums and by creating a community to start a conversation. We provide reviews of available resources to empower students and return the power of choice to them.
    </string>
    <string name="mainActivityTitleText">I       .     .     .</string>
    <string name="mainActivityQuestionsButton">have questions</string>
    <string name="mainActivityMapButton">feel unsafe</string>
    <string name="mainActivitySupportButton">need support</string>

    <!-- Questions Activity -->
    <string name="title_question_list">Questions</string>
    <string name="title_question_detail">Question Detail</string>

    <!-- Maps Activity -->
    <string name="aboutMapsActivity">
        These resources are there for people who have recently been assaulted and can help if you need immediate advice, medical attention, or crisis counselling. If you have nowhere else to turn, some of the following resources may be helpful.
    </string>
    <string name="title_activity_maps">Find Help Near Me</string>

    <!-- Support Activity -->
    <string name="title_activity_support">Support</string>
    <string name="aboutSupportActivity">
        Sayfe is designed to guide you after an experience of sexual violence, whatever you choose to do. Sayfe will help you create a record of your experience and assist you in finding resources that fit your needs. Whether you want to report your assault to the police, find support from your university or community, or simply know that you are not alone, Sayfe is here for you.
    </string>
    <string name="supportActivityTitleTextView">
        I Need Support …
    </string>
    <string name="supportActivitySharedStoriesButton">Shared Stories</string>
    <string name="supportActivityOptionsButton">Options</string>
    <string name="supportActivityQuestionsButton">Questions</string>

    <!-- Options Activity -->
    <string name="title_activity_options">Options</string>
    <string name="aboutOptionsActivity">
        What are my Options????
    </string>

    <!-- SharedStories Activity -->
    <string name="sharedStoriesActivityTitle">Shared Stories</string>
    <string name="aboutSharedStoriesActivity">
        *Trigger Warning* In this section, you will find stories shared by others, concerning their own experiences with sexual assault. If you would like to share your own story, see the “I want to share my story” section. Remember, you are not alone!     </string>
    <string name="sharedStoriesActivityTitleTextView">Share your story …</string>
    <string name="sharedStoriesReplayButton">Play</string>
    <string name="sharedStoriesUploadButton">Upload</string>
    <string name="sharedStoriesActivitySharedStoriesListingsText">... or browse stories shared by others</string>

    <!-- SharedStoriesListingsActivity -->
    <string name="sharedStoriesListingsActivityTitle">Shared Stories</string>
    <string name="aboutSharedStoriesListingsActivity">
        *Trigger Warning* In this section, you will find stories shared by others, concerning their own experiences with sexual assault. If you would like to share your own story, see the “I want to share my story” section. Remember, you are not alone!     </string>

    <!-- Demo SharedStories Listings -->
    <string-array name="sharedStoriesListingsDemoData">
        <item>My experience being catcalled ...</item>
        <item>Abuse by my ex-husband</item>
        <item>Why we need to stand together against sexual assault</item>
        <item>How I escaped my deviant boyfriend</item>
        <item>My experience using Kids Help Phone</item>
        <item>What can you do now? Advice for those who struggle.</item>
        <item>I\'m Scared</item>
        <item>Fear of online dating</item>
        <item>Social Anxiety</item>
    </string-array>
</resources>
