<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.sayfe.sayfe.SupportActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/supportActivityTitleTextView"
        android:id="@+id/supportActivityTitleTextView"
        android:layout_marginTop="80dp"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="0dp" />

    <Button
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supportActivitySharedStoriesButton"
        android:id="@+id/sharedStoriesReplayButton"
        android:background="@drawable/round_button"
        android:padding="16dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white" />

    <Button
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supportActivityOptionsButton"
        android:id="@+id/supportActivityOptionsButton"
        android:background="@drawable/round_button"
        android:padding="16dp"
        android:layout_below="@+id/sharedStoriesReplayButton"
        android:layout_alignLeft="@+id/sharedStoriesReplayButton"
        android:layout_alignStart="@+id/sharedStoriesReplayButton"
        android:layout_marginTop="25dp"
        android:layout_alignRight="@+id/sharedStoriesReplayButton"
        android:layout_alignEnd="@+id/sharedStoriesReplayButton"
        android:textColor="@color/white" />

    <Button
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supportActivityQuestionsButton"
        android:id="@+id/supportActivityQuestionsButton"
        android:background="@drawable/round_button"
        android:padding="16dp"
        android:layout_below="@+id/supportActivityOptionsButton"
        android:layout_alignLeft="@+id/supportActivityOptionsButton"
        android:layout_alignStart="@+id/supportActivityOptionsButton"
        android:layout_alignRight="@+id/supportActivityOptionsButton"
        android:layout_alignEnd="@+id/supportActivityOptionsButton"
        android:layout_marginTop="25dp"
        android:textColor="@color/white" />

</RelativeLayout>
