<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.sayfe.sayfe.SharedStoriesActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sharedStoriesActivityTitleTextView"
        android:id="@+id/sharedStoriesActivityTitleTextView"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recordButtonFrameLayoutContainer"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/sharedStoriesActivityTitleTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="150dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/recordButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/ic_mic_white_48dp"
            android:layout_marginBottom="10dp"
            android:cropToPadding="false"
            android:layout_marginTop="5dp" />
    </FrameLayout>



    <Button
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sharedStoriesReplayButton"
        android:id="@+id/sharedStoriesReplayButton"
        android:background="@drawable/small_round_button"
        android:padding="16dp"
        android:textColor="@color/white"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp" />

    <Button
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sharedStoriesUploadButton"
        android:id="@+id/sharedStoriesUploadButton"
        android:background="@drawable/small_round_button"
        android:padding="16dp"
        android:textColor="@color/white"
        android:layout_alignTop="@+id/sharedStoriesReplayButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sharedStoriesActivitySharedStoriesListingsText"
        android:id="@+id/sharedStoriesActivitySharedStoriesListingsButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorAccent" />


</RelativeLayout>
